--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TX43K9CSR7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TX43K9CSR7');
+</script>
     <meta charset="utf-8" />
     <!-- <base href="./"> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -8,7 +17,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Promoción 1998 - Santa Rosa de Chosica"
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
